--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
-  "CLIENT_TOKEN": "MTI0MTYyMDA1MDY4Mzg5MTc1Mg.GbZmsl.CKSEIw-5YWKTNblHcM7CZWuEcY0DE28GLIGjpk",
-  "clientId": "1241620050683891752",
-  "guildId": "1243580814340526130",
-  "language": "es",
-  "prefix": "!",
-  "serverId": "1243580814340526130"
+  "CLIENT_TOKEN": " ",
+  "clientId": " ",
+  "guildId": " ",
+  "language": " ",
+  "prefix": " ",
+  "serverId": " "
 }
