--- a/config/config.json
+++ b/config/config.json
@@ -1,6 +1,6 @@
 {
-  "clientId": "1241620050683891752",
-  "guildId": "1243580814340526130",
-  "language": "es",
-  "prefix": "."
+  "clientId": "your-client-id-here",
+  "guildId": "your-guild-id-here",
+  "language": "default-bot-language",
+  "prefix": "bot-prefix"
 }
