--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "MichaelQhdez",
     "license": "ISC",
     "description": "",
     "dependencies": {
-      "discord.js": "^14.15.2",
-      "dotenv": "^16.4.5",
-      "ms": "^2.1.3"
+        "discord-arts": "^0.5.8",
+        "discord.js": "^14.15.2",
+        "dotenv": "^16.4.5",
+        "ms": "^2.1.3",
+        "node-fetch": "^3.3.2",
+        "whatwg-url": "^14.0.0"
     }
-  }
-  
+}
