--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "discord-arts": "^0.5.8",
         "discord.js": "^14.15.2",
         "dotenv": "^16.4.5",
+        "mongoose": "^8.4.0",
         "ms": "^2.1.3",
         "node-fetch": "^3.3.2",
         "whatwg-url": "^14.0.0"
