--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "@discordjs/builders": "^1.8.2",
         "anime-actions": "^2.1.1",
+        "canvacord": "^6.0.2",
         "discord-arts": "^0.5.9",
-        "discord.js": "^14.15.2",
+        "discord-html-transcripts": "^3.2.0",
+        "discord.js": "^14.15.3",
         "dotenv": "^16.4.5",
-        "mongoose": "^8.4.0",
+        "mongoose": "^8.4.1",
         "ms": "^2.1.3",
         "node-fetch": "^3.3.2",
         "whatwg-url": "^14.0.0"
