--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@discordjs/builders": "^1.8.2",
         "anime-actions": "^2.1.1",
         "canvacord": "^6.0.2",
+        "canvafy": "^7.1.0",
         "discord-arts": "^0.5.9",
         "discord-html-transcripts": "^3.2.0",
         "discord.js": "^14.15.3",
