--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
-    "author": "MichaelQhdez",
+    "author": "MichaelQhdez, MickeDevQH",
     "license": "ISC",
     "description": "",
     "dependencies": {
@@ -18,7 +18,7 @@
         "discord-html-transcripts": "^3.2.0",
         "discord.js": "^14.15.3",
         "dotenv": "^16.4.5",
-        "mongoose": "^8.4.1",
+        "mongoose": "^8.9.5",
         "ms": "^2.1.3",
         "node-fetch": "^3.3.2",
         "whatwg-url": "^14.0.0",
